WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105855
Web Inspector: Native Memory Instrumentation plugin: do not generate 'not instrumented' warning for instrumented mutable members.
https://bugs.webkit.org/show_bug.cgi?id=105855
Summary
Web Inspector: Native Memory Instrumentation plugin: do not generate 'not ins...
Ilya Tikhonovsky
Reported
2012-12-29 03:24:17 PST
Plugin scans all methods in the translation unit, visits methods with reportMemoryUsage name and collects all the reported class members into instrumentedMembers vector. Actually it visits all call expressions inside reportMemoryUsage method and only if the method name of call expression matches with predefined set of instrumentation methods, addMember, addRawPointer etc. then it scans all the arguments of the call expression. It expects that argument has type MemberExpr but for the mutable members the type of the expression is ImplicitCastExpr because it needs to be converted into const T& where T is a template argument of addMember method.
Attachments
Patch
(3.75 KB, patch)
2012-12-29 03:28 PST
,
Ilya Tikhonovsky
vsevik
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2012-12-29 03:28:48 PST
Created
attachment 180930
[details]
Patch
Ilya Tikhonovsky
Comment 2
2012-12-29 03:39:33 PST
Committed
r138563
: <
http://trac.webkit.org/changeset/138563
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug