Web Inspector: Native Memory Instrumentation plugin: do not generate 'not instrumented' warning for instrumented mutable members. https://bugs.webkit.org/show_bug.cgi?id=105855

Reviewed by Vsevolod Vlasov.

Extract MemberExpr from ImplicitCastExpr. It happens when we instrument a mutable member because
addMember expects const T& and the mutable ref to member implicitly converts into const ref to member.

* clang/ReportMemoryUsagePlugin/ReportMemoryUsage.cpp:
(ReportMemoryUsageVisitor):
(clang::AddMemberCallVisitor::VisitCallExpr):
(clang::ReportMemoryUsageVisitor::VisitCXXMethodDecl):
(clang::ReportMemoryUsageVisitor::checkMembersCoverage):

git-svn-id: svn://svn.chromium.org/blink/trunk@138563 bbb929c8-8fbe-4397-9dbb-9b2b20218538